# panda-rs-plugins

./: .gitignore  Cargo.toml  Dockerfile  GETTING_STARTED.md  README.md  install_plugins.sh  take_test_recording.py
.github/workflows/: build.yml
ir_call/: Cargo.toml  README.md  run.sh
ir_call/src/: lib.rs
panda-gdb/: Cargo.toml  README.md  run.sh  run_noreplay.sh  run_noreplay_i386.sh  run_noreplay_mips.sh  run_noreplay_ppc.sh
panda-gdb/src/: args.rs  connection.rs  lib.rs  memory_map.rs  panda_target.rs  target_state.rs
panda-gdb/src/monitor_commands/: mod.rs  parser.rs  proc_info.rs
panda-il-trace/: Cargo.toml  README.md  run.sh  setup.sh
panda-il-trace/src/: callstack.rs  il.rs  lib.rs
panda-il-trace/src/fil/: bb.rs  bbl.rs  branch.rs  mod.rs
