[package]
name = "panda-il-trace"
version = "0.1.0"
authors = ["tnballo <tnballo@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "panda-il-trace"
path = "src/lib.rs"
required-features = ["bin"]

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-re = "0.3.0"
panda-re-sys = "0.1.0"
lazy_static = "1.4"
#falcon = "0.4.12"

[features]
bin = ["panda-re/libpanda"]
