[package]
name = "panda-il-trace"
version = "0.1.0"
authors = ["tnballo <tnballo@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "panda-il-trace"
path = "src/lib.rs"
required-features = ["bin"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: need panda-rs updated on crates.io, this uses new-ish OSI stuff!
#panda-re = "0.3.0"
#panda-re-sys = "0.1.0"
panda-re = { path = "/home/tballo/proj/panda-rs/panda-rs"}
panda-re-sys = { path = "/home/tballo/proj/panda-rs/panda-sys"}
lazy_static = "1.4"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.6.1"
falcon = { version = "0.4.12", features = ["capstone4"] }

[features]
bin = ["panda-re/libpanda"]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]